NIFI-15272 Replaced String.format() with .formatted() and corrected case for url.